--- a/18-javascript.Rmd
+++ b/18-javascript.Rmd
@@ -5,7 +5,7 @@ knitr::opts_chunk$set( comment = "", eval = FALSE)
 ```
 
 At its core, __building a Shiny app is building a JavaScript application__ that can talk with an R session. 
-This process is invisible to most Shiny developers, who usually do everything in R, and in the end, this is the case: most of the Shiny apps out there are 100% written with R. 
+This process is invisible to most Shiny developers, who usually do everything in R. In fact, most of the Shiny apps out there are 100% written with R. 
 
 In fact, when you are writing UI elements in Shiny, __what you are actually doing is building a series of HTML tags__. 
 
@@ -28,11 +28,11 @@ fluidPage(
 ```
 
 Later on, when the app is launched, `{shiny}` binds events to UI elements, and these JavaScript events will communicate with R, in the sense that they will send data to R, and receive data from R. 
-Most of the time, when the JavaScript side of the websocket receives one of these events,  the page the user sees is modified (for example, a plot is drawn).
+Most of the time, when the JavaScript side of the websocket receives one of these events, the page the user sees is modified (for example, a plot is drawn).
 On the R end of the websocket, _i.e_ when R receives data from the web page, a value is fetched, and something is computed. 
 
 What happens under the hood is a little bit complex and out of scope for this book, but the general idea is: R talks to your browser through a web socket (that you can imagine as a small "phone line" with both software modules listening at each end
-^[See this post on dev.to <https://dev.to/buzzingbuzzer/comment/g0g> for a quick introduction to the general concept of web socket]
+^[See this post on dev.to <https://dev.to/buzzingbuzzer/comment/g0g> for a quick introduction to the general concept of web sockets]
 ), and this browser talks to R through the same web socket.
 
 // TODO: create here a simple Flowchart 
@@ -47,8 +47,8 @@ With `output$bla <- renderPlot({})`, what we are doing is making the two communi
 
 So even if everything is written in R, we __are__ writing a web application, _i.e_. HTML, CSS and JavaScript elements. 
 Once you have realized that, the possibilities are endless: in fact almost anything doable in a "classic" web app can be done in Shiny with a little bit of tweaking. 
-What this also implies is that getting (even a little bit) better at writing HTML, CSS, and especially JavaScript will make your app better, lighter, and more user-friendly, as JavaScript is a language that has been designed to interact with a web page: change element appearances, hide and show things, click somewhere, show alerts and prompts... 
-__Knowing just enough JavaScript can improve the quality of your app__: especially when you have been using R to render some complex UIs: think conditional panels, simulating a button click from the server, hide and show elements... 
+What this also implies is that getting (even a little bit) better at writing HTML, CSS, and especially JavaScript will make your app better, lighter, and more user-friendly, as JavaScript is a language that has been designed to interact with a web page: change element appearances, hide and show things, click somewhere, show alerts and prompts, etc.
+__Knowing just enough JavaScript can improve the quality of your app__: especially when you have been using R to render some complex UIs: think conditional panels, simulating a button click from the server, hide and show elements, etc.
 All these things are good examples of where you should be using JavaScript instead of building more or less complex `renderUI` or `insertUI` patterns in your server.
 
 Moreover, the number of JavaScript libraries available on the web is tremendous; and the good news is that Shiny has everything it needs to bundle external JavaScript libraries inside your application
@@ -90,7 +90,7 @@ Feel free to refer to the first chapter of [JavaScript 4 Shiny - Field Notes](ht
 ### Understanding html, class, and id
 
 You have to think of a web page as a tree, where the top of the webpage is the root node, and every element in the page is a node in this tree (this tree is called a DOM, for Document Object Model). 
-__You can work on any of these HTML nodes with JavaScript__: modify it, bind events to it and/or listen to events, hide and show...
+__You can work on any of these HTML nodes with JavaScript__: modify it, bind events to it and/or listen to events, hide and show, etc.
 But first, __you have to find a way to identify these elements__: either as a group of elements or as a unique element inside the whole tree. 
 That is what HTML semantic elements, classes, and ids are made for.
 Consider this piece of code:
@@ -119,13 +119,13 @@ Let's detail what we have got here:
 
 + HTML tags, which are the building blocks of the "tree": here `div`, `h2` and `button` are HTML tags.
 + The button has an `id`, which is short for "identifier". 
-This id has to to be unique: this reference allows to refer to this exact element, and more specifically, it allows JavaScript and R to talk to each other: if you click on a button, you have to be sure you are referring to this specific button, and only that one.
+This id has to to be unique: this reference allows you to refer to this exact element, and more specifically, it allows JavaScript and R to talk to each other: if you click on a button, you have to be sure you are referring to this specific button, and only that one.
 + Elements can have a class which can apply to multiple elements. 
 This can be used in JavaScript, but it is also very useful for styling elements in CSS. 
 
 ### Querying in Vanilla JavaScript
 
-In "Vanilla" JavaScript (i.e without any external plugin installed), you can query these elements using methods from the `document` object. 
+In "Vanilla" JavaScript (i.e without any external plugins installed), you can query these elements using methods from the `document` object. 
 For example: 
 
 ``` javascript
@@ -148,12 +148,12 @@ document.getElementsByTagName("div")
 ```
 
 Note that some of these methods have been introduced with ES6, which is a version of JavaScript that came out in 2015. 
-This version of JavaScript is supported by most browser since mid-2016 (and June 2017 for Firefox) (see [JavaScript Versions](https://www.w3schools.com/js/js_versions.asp) from W3Schools).
+This version of JavaScript is supported by most browsers since mid-2016 (and June 2017 for Firefox) (see [JavaScript Versions](https://www.w3schools.com/js/js_versions.asp) from W3Schools).
 Most of your users should now be using a browser version that is compatible with ES6, but that is something that you might want to keep in mind: browser version matters when it comes to using JavaScript. 
 
 ### About DOM events 
 
-When users navigate a webpage, they are generating events on this page: clicking, hovering elements, pressing keys... all these are listened to by the JavaScript runtime, plus some events that are not generated by the users: for example, there is a "ready" event generated when the webpage has finished loading. 
+When users navigate to a webpage, they will generate events on the page: clicking, hovering elements, pressing keys, etc. All these events are listened to by the JavaScript runtime, plus some events that are not generated by the users: for example, there is a "ready" event generated when the webpage has finished loading. 
 Most of these events are linked to a specific node in the tree: for example, if you click on something, you are clicking on a node in the DOM. 
 That is where JavaScript events come into play: when an event is triggered in JavaScript, you can link to it a "reaction", in other words a piece of JavaScript code that is executed when this event occurs. 
 
@@ -171,7 +171,7 @@ Here are some examples of events:
 
 For a full list, please refer to <https://developer.mozilla.org/fr/docs/Web/Events>.
 
-Once you have this list in mind, you can then select elements in the DOM, then adding `addEventListener` to them, and defining a callback function: what happens when the event is triggered. 
+Once you have this list in mind, you can then select elements in the DOM, add an `addEventListener` to them, and define a callback function (which is executed when the event is triggered). 
 For example, the code below adds an event to the `input` when a key is pressed, showing a native `alert()` to the user.
 
 ``` html
@@ -186,7 +186,7 @@ For example, the code below adds an event to the `input` when a key is pressed, 
 </script>
 ```
 
-Note also that `Shiny` also generates events, meaning that you can customize the behavior of your application based on these events. 
+Note that `Shiny` also generates events, meaning that you can customize the behavior of your application based on these events. 
 Here is a code that launches an alert when Shiny is connected:
 
 ``` javascript
@@ -206,8 +206,8 @@ The `jQuery` framework is natively included in Shiny.
 
 `r right_link("jQuery home page", "https://jquery.com/")`
 
-`jQuery` is a very popular JavaScript library which is designed to manipulate the DOM, its events and its elements. 
-It can be used to do a lot of things, like hide and show, change class, click somewhere... 
+`jQuery` is a very popular JavaScript library which is designed to manipulate the DOM, its events, and its elements. 
+It can be used to do a lot of things, like hide and show objects, change object classes, click somewhere, etc.
 And to be able to do that, it comes with the notion of selectors, which will be put between `$()`.
 You can use, for example:
 
@@ -233,7 +233,7 @@ You can refer to these with `[]` after the tag name.
 
 These and other selectors are __used to identify one or more node(s) in the big tree which is a web page__. 
 Once we have identified these elements, we can either extract or change data contained in these nodes, or invoke methods contained within these nodes.
-Indeed JavaScript, as R, can be used as a functional language, but most of what we do is done in an object-oriented way. 
+Indeed JavaScript, like R, can be used as a functional language, but most of what we do is done in an object-oriented way. 
 In other words, you will interact with objects from the web page, and these objects will contain data and methods. 
 
 Note that this is not specific to `jQuery`: elements can also be selected with standard JavaScript. 
@@ -268,7 +268,7 @@ Though it will help to make it lighter in terms of code and easier to grasp in t
 
 + `alert("message")` uses the built-in alert-box mechanism from the user's browser (i.e., the `alert()` function is not part of `jQuery` but it is built inside the user's browser).
 It works well as it relies on the browser instead of relying on R or on a specific JavaScript library. 
-You can use this functionality to replace a call to `{shinyalert}` [@R-shinyalert]: the result is a little less aesthetically pleasing, but that is easier to implement and maintain.
+You can use this functionality to replace a call to `{shinyalert}` [@R-shinyalert]: the result is a little less aesthetically pleasing, but is easier to implement and maintain.
 
 + `var x = prompt("this", "that");` this function opens the built-in prompt, which is a text area where the user can input text. 
 With this code, when the user clicks "OK", the text is stored in the `x` variable, which you can then send back to R (see further part down this chapter for more info on how to do that). 
@@ -317,7 +317,7 @@ It can be used as a replacement for `shiny::removeUI()`, or as a conditional UI.
 ### Where to put them - Back to JavaScript Events
 
 OK, now that we have got some ideas about JS code that can be used in Shiny, where do we put it? 
-HTML and JS have a concept called `events`, which are... well events that happen when the user manipulates the webpage: when the user clicks, hovers (the mouse goes over an element), presses the keyboard... 
+HTML and JS have a concept called `events`, which are... well, events that happen when the user manipulates the webpage: when the user clicks, hovers (the mouse goes over an element), presses the keyboard, etc.
 All these events can be used to trigger a JavaScript function. 
 
 Here are some examples of adding JavaScript functions to DOM events:
@@ -503,7 +503,7 @@ observe({
 ### From JavaScript to R
 
 How to do the other way around (from JavaScript to R)?
-Shiny apps, in the browser, contain an object called `Shiny`, which can be used to send values to R, by creating an `InputValue`. 
+Shiny apps, in the browser, contain an object called `Shiny`, which can be used to send values to R by creating an `InputValue`. 
 For example, with: 
 
 ```{js 18-javascript-17, eval = FALSE, echo = TRUE}
@@ -614,7 +614,7 @@ mod_my_first_module_server <- function(input, output, session){
 }
 ```
 
-Another thing to note about this `id` creation is that you can generate `id` that are not defined in R beforehand. 
+Another thing to note about this `id` creation is that you can generate `id`s that are not defined in R beforehand. 
 For example, let's create the code below:
 
 ```{r 18-javascript-23, eval = FALSE}
@@ -641,7 +641,7 @@ server <- function(
 shinyApp(ui, server)
 ```
 
-Then, going into your developer console and typing `Shiny.setInputValue("notfromr", Math.random())` will print a random number in your console, event if this input wasn't defined in your UI function.
+Then, go into your developer console and type `Shiny.setInputValue("notfromr", Math.random())`. This should print a random number in your console, even if this input wasn't defined in your UI function.
 
 ## About `{golem}` js functions
 
@@ -651,7 +651,7 @@ These functions are added by default with `golem::activate_js()` in `app_ui`.
 Then they are called with `golem::invoke_js("function", "element")`.
 
 This `element` can be one of a series of elements (most of the time scalar elements) which can be used to select the DOM node you want to interact with.
-It can be a full `jQuery` selector, an id or a class.
+It can be a full `jQuery` selector, an id, or a class.
 Note that you can pass multiple elements, with `invoke_js` `...` parameters
 
 ### `golem::invoke_js()`
@@ -676,17 +676,17 @@ See `?golem::activate_js` for a full list of built-in functions.
 
 ## One Last Thing: API calls
 
-If your application does API calls, chances are that right now you have being doing them straight from R. 
+If your application uses API calls, chances are that right now you have being doing them straight from R. 
 But there are downsides to that approach. 
-Notably if the API limits requests based on an IP and your application gets a lot of traffic, your users will end up being unable to use the app because of this restriction. 
+Notably, if the API limits requests based on an IP and your application gets a lot of traffic, your users will end up being unable to use the app because of this restriction. 
 
 So, why not switch to writing these API calls in JavaScript? 
-As JavaScript is run inside the users' browser, the limitation will apply to the users' IPs, not the one where the application is deployed, allowing you to scale more easily your application. 
+As JavaScript is run inside the users' browser, the limitation will apply to the users' IPs, not the one where the application is deployed, allowing you to more easily scale your application. 
 
 You can write this API call using the `fetch()` JavaScript function. 
 It can then be used inside a Shiny JavaScript handler, or as a response to a DOM event (for example, with `tags$button("Get Me One!", onclick = "get_rand_beer()")`, as we will see below). 
 
-Here is the general skeleton, that would work when the API does not need authentication and returns JSON. 
+Here is the general skeleton that would work when the API does not need authentication and returns JSON. 
 
 + Inside JavaScript (here, we create a function  that will be available on an `onclick` event)
 
@@ -734,7 +734,7 @@ It can be installed from GitHub
 remotes::install_github("ColinFay/bubble")
 ```
 
-You can use in RMarkdown chunks, by setting the `{knitr}` engine:
+You can use it in RMarkdown chunks by setting the `{knitr}` engine:
 
 ```{r 18-javascript-27, eval = FALSE}
 bubble::set_node_engine()
