--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -7,16 +7,16 @@ library(shiny)
 ```
 
 In the next chapter you will be introduced to the `{golem}` [@R-golem] package, __an opinionated framework for building production-ready Shiny Applications__. 
-This framework will be used a lot through this book, and it relies on the idea that every Shiny application should be built as an R package.
+This framework will be used a lot throughout this book, and it relies on the idea that every Shiny application should be built as an R package.
 
 But in a world where Shiny Applications are mostly created as a series of files, why bother with a package? 
 
 ### What is in a production-grade Shiny App? 
 
-You probably haven't realized it yet, but if you have built a significant (in term of code base) Shiny application, chances are you have been using a package-like structure without knowing it. 
+You probably haven't realized it yet, but if you have built a significant (in terms of size or complexity of the code base) Shiny application, chances are you have been using a package-like structure without knowing it. 
 
-Think about your last Shiny application which was created as a single-file (`app.R`) or two files app (`ui.R` and `server.R`). 
-On top of these files, what so you needed to make it __a production-ready application__?
+Think about your last Shiny application which was created as a single-file (`app.R`) or two-file app (`ui.R` and `server.R`). 
+On top of these files, what do you need to make it __a production-ready application__?
 
 #### Metadata
 
@@ -297,16 +297,16 @@ If you develop R packages, chances are you have split your functions into series
 
 ### When should you modularize?
 
-No matter how big your application is, it is always a safe to start modularizing from the very beginning. The sooner you use modules, the easier downstream development will be.
+No matter how big your application is, it is always safe to start modularizing from the very beginning. The sooner you use modules, the easier downstream development will be.
 It is even easier if you are working with `{golem}`, which promotes the use of modules from the very beginning of your application. 
 
 > "Yes, but I just want to write a small app, nothing fancy"
 
 
 
-Production apps almost always started as a small Proof of Concept. 
+A production app almost always starts its life as a small Proof of Concept. 
 Then, the small PoC becomes an interesting idea. 
-Then, this idea becomes a strategical asset. 
+Then, this idea becomes a strategic asset. 
 And before you know it, your 'not-that-fancy' app needs to become larger and larger.
 So, you will be better off starting on solid foundations from the very beginning.
 
