fix typo , missing 'r' in `bundle_resouces()`

--- a/08-css.Rmd
+++ b/08-css.Rmd
@@ -255,7 +255,7 @@ What this tag will contain is these three elements:
 The first two are standard: you do not need to change them, they are necessary to indicate to the HTML page that you are creating a stylesheet, with the type being text/css.
 The `href` is the one you will need to change: this path points to where your style file is located. 
 
-If you are building your application with `{golem}` [@R-golem], the good news is that this file creation and linking is transparent: if you call `golem::add_css_file("name")`, a file will be created at `inst/app/www`, and this file will be automatically linked inside your UI thanks to the `bundle_resouces()` function. 
+If you are building your application with `{golem}` [@R-golem], the good news is that this file creation and linking is transparent: if you call `golem::add_css_file("name")`, a file will be created at `inst/app/www`, and this file will be automatically linked inside your UI thanks to the `bundle_resources()` function. 
 
 ### Using R packages
 
