--- a/11-step-by-step-build.Rmd
+++ b/11-step-by-step-build.Rmd
@@ -1,6 +1,6 @@
 # (PART) Step 3: Build  {-}
 
-# Building app with `{golem}` {#stepbuild}
+# Building an app with `{golem}` {#stepbuild}
 
 Now that the application is prototyped inside a `{golem}` [@R-golem] skeleton, you can work on its integration. 
 In this step of the workflow, you will be linking the back-end and front-end together, and working on the global engineering of the application, _i.e_:
