--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -121,9 +121,9 @@ We strongly suggest to use git with a graphical interface (GitLab, GitHub, Bitbu
 These tasks are defined as issues, and will be closed during development.
 These interfaces can also be used to set continuous integration.
 
-If the team follows a `git flow` (described in chapter \@(ref: secure)), the manager will also be in charge of reviewing and accepting the pull/merge requests to the main `dev` branch if they solve the associated issues.
+If the team follows a `git flow` (described in chapter \@ref(secure)), the manager will also be in charge of reviewing and accepting the pull/merge requests to the main `dev` branch if they solve the associated issues.
 
-Do not worry if this sounds like a foreign language to you, we will get back to this method later in this book (chapter \@(ref: secure)). 
+Do not worry if this sounds like a foreign language to you, we will get back to this method later in this book (chapter \@ref(secure)). 
 
 #### Developers
 
